--- a/assets/css/mycss.css
+++ b/assets/css/mycss.css
@@ -306,7 +306,7 @@ img {
 }
 .harga{
 	font-weight: bold;
-	color: #c40c41;
+	color: #ED9D00;
 }
 .rating > input { display: none; }
 .rating > label:before {
